name:                Pixels
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/SwiftsNamesake/Pixels#readme
license:             MIT
license-file:        LICENSE.md
author:              Jonatan H Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan H Sundqvist, &lt;2016&gt;
category:            &lt;category&gt;
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- arch: i386, x86_32 -- Awesomium is 32-bit

library
  hs-source-dirs:      src
  exposed-modules:     Pixels.Render, Pixels.Interaction, Pixels.Types, Pixels.Lenses, Pixels.Walker, Pixels.Trinkets
  build-depends:       base >= 4.5 && <= 5,
                       reactive-banana,
                       JuicyPixels == 3.2.*,
                       repa == 3.4.*,
                       GLFW-b,
                       linear,
                       transformers,
                       utf8-string,
                       directory,
                       errors,
                       friday,
                       async,
                       monad-loops,
                       -- QuadTree,
                       containers,
                       lens,
                       aeson,
                       fsnotify,
                       wreq,
                       OpenGL,
                       random,
                       GLUtil,
                       filepath,
                       either,
                       -- monad-transformers,
                       -- glob,
                       Michelangelo,
                       Cartesian

  -- extra-include-dirs:  "C:/Program Files (x86)/Khrona LLC/Awesomium SDK/1.6.5/include"
  -- extra-lib-dirs:      "C:/Program Files (x86)/Khrona LLC/Awesomium SDK/1.6.5/build/lib/release"
  -- extra-lib-dirs:      "C:/Program Files (x86)/Khrona LLC/Awesomium SDK/1.6.5/build/bin/release"
  -- extra-include-dirs:  C:\Users\Jonatan\Downloads\Programmering\ftgl-2.1.3-vc11-64\ftgl-2.1.3-vc11-64\include
  -- extra-lib-dirs:      C:\Users\Jonatan\Downloads\Programmering\ftgl-2.1.3-vc11-64\ftgl-2.1.3-vc11-64\lib
  -- TODO: WHY THE FUCK DOES STACK IGNORE THE PATH AND LIB OPTIONS ARRGGHGGHHGGHHGHGHHGHGHGGH
  -- extra-libraries:     ftgl

  default-language:    Haskell2010


executable Pixels-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       Pixels
  default-language:    Haskell2010

test-suite Pixels-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       Pixels
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SwiftsNamesake/Pixels
