name:                Pixels
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/SwiftsNamesake/Pixels#readme
license:             MIT
license-file:        LICENSE.md
author:              Jonatan H Sundqvist
maintainer:          jonatanhsundqvist@gmail.com
copyright:           (c) Jonatan H Sundqvist, &lt;2016&gt;
category:            &lt;category&gt;
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- arch: i386, x86_32 -- Awesomium is 32-bit
flag debug
  Description:         Debug mode
  Default:             False


flag pedantic
  Description:         Enable pedantic warnings
  Default:             True


flag optimised
  Description:         Enable optimisations
  Default:             True


flag profiled
  Description:         Enable profiling
  Default:             False


library
  ghc-options:         -Wall

  default-extensions:    DuplicateRecordFields
                       , FunctionalDependencies
                       , MultiParamTypeClasses
                       , FlexibleInstances
                       , TypeSynonymInstances
                       , TupleSections
                       , DuplicateRecordFields

  hs-source-dirs:      src
  exposed-modules:       Pixels.Types
                       , Pixels.Render
                       , Pixels.Render.Utils
                       , Pixels.Render.Typography
                       , Pixels.Persistence
                       , Pixels.Interaction
                       , Pixels.Lenses
                       , Pixels.Trinkets
                       , Pixels.Load
                       --, Pixels.Commands
                       --, Pixels.Plugins

  build-depends:         base            >= 4.5 && <= 5
                       , JuicyPixels     == 3.2.*
                       --, ghc
                       --, ghc-paths
                       , repa            == 3.4.*
                       , repa-io         >= 3.4 && < 3.5
                       , FontyFruity
                       , GPipe
                       , GPipe-GLFW
                       , GLFW-b
                       , colour          >= 2.3.3 && < 2.4
                       , vector
                       , text
                       , bytestring
                       , linear
                       , attoparsec
                       , transformers
                       , utf8-string
                       , directory
                       , time
                       --, friday
                       , async
                       , monad-loops
                       -- QuadTree
                       , containers
                       , stm
                       , aeson
                       , lens
                       , fsnotify
                       , wreq
                       , random
                       , filepath
                       , either
                       , ansi-terminal
                       -- monad-transformers
                       , cubist-sculptor
                       , Cartesian >= 0.5
                       , Leibniz

  -- extra-include-dirs:  "C:/Program Files (x86)/Khrona LLC/Awesomium SDK/1.6.5/include"
  -- extra-lib-dirs:      "C:/Program Files (x86)/Khrona LLC/Awesomium SDK/1.6.5/build/lib/release"
  -- extra-lib-dirs:      "C:/Program Files (x86)/Khrona LLC/Awesomium SDK/1.6.5/build/bin/release"
  -- extra-include-dirs:  C:\Users\Jonatan\Downloads\Programmering\ftgl-2.1.3-vc11-64\ftgl-2.1.3-vc11-64\include
  -- extra-lib-dirs:      C:\Users\Jonatan\Downloads\Programmering\ftgl-2.1.3-vc11-64\ftgl-2.1.3-vc11-64\lib
  -- TODO: WHY THE FUCK DOES STACK IGNORE THE PATH AND LIB OPTIONS ARRGGHGGHHGGHHGHGHHGHGHGGH
  -- extra-libraries:     ftgl

  default-language:    Haskell2010


executable Pixels
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
  -- TODO: Parallel compilation and larger stack
  -- ghci -j8 +RTS -A128m
  build-depends:       base,
                       Pixels
                       
  default-language:    Haskell2010

test-suite Pixels-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       Pixels
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/SwiftsNamesake/Pixels
